[package]
name    = "sumo-parser-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sigmakee-rs-core.workspace = true
serde.workspace            = true
serde_json.workspace       = true
wasm-bindgen               = "0.2"
serde-wasm-bindgen         = "0.6"
js-sys                     = "0.3"

# Release-profile overrides for this crate live at the workspace root
# (`[profile.release.package.sumo-parser-wasm]`) — Cargo only honours
# profile sections at the root.
