[package]
name    = "sumo-parser-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Direct path dep with `default-features = false` (NOT `workspace = true`):
# the workspace edge turns on core's default `ask` feature, which spawns
# subprocess provers and is `compile_error!`-banned on wasm32.  We enable only
# `native-prover` — the pure-Rust saturation prover, the one proving backend
# that runs in-browser.
sigmakee-rs-core = { path = "../core", default-features = false, features = ["native-prover"] }
serde.workspace            = true
serde_json.workspace       = true
wasm-bindgen               = "0.2"
serde-wasm-bindgen         = "0.6"
js-sys                     = "0.3"

# Release-profile overrides for this crate live at the workspace root
# (`[profile.release.package.sumo-parser-wasm]`) — Cargo only honours
# profile sections at the root.
